# quantilica-cli

./: README.md  pyproject.toml
src/quantilica/cli/: __init__.py  cli.py  manifests.py
src/quantilica_cli/: cli.py  manifests.py
tests/: test_manifests.py
