[project]
name = "quantilica-cli"
version = "0.1.0"
description = "Unified CLI for Quantilica open data fetchers"
readme = "README.md"
authors = [{ name = "Komesu, D.K.", email = "daniel@dkko.me" }]
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["quantilica", "cli", "open-data", "brazil"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "quantilica-core[cli] @ git+https://github.com/Quantilica/quantilica-core.git",
]

[project.scripts]
quantilica = "quantilica.cli.cli:main"

[dependency-groups]
dev = ["ruff>=0.9.0", "pytest>=8.0.0"]

# Os fetchers são instalados independentemente pelo usuário — quantilica-cli
# os descobre via entry points (grupo "quantilica.fetchers") sem dependência direta.
# Exemplo de instalação local para desenvolvimento:
#   uv pip install -e ../comex-fetcher ../rtn-fetcher ...

# Para desenvolvimento local do quantilica-core em conjunto com o CLI:
# cd quantilica-cli && uv pip install -e ../quantilica-core (sem [tool.uv.sources])
# Em produção, quantilica-core é instalado via git+https (declarado em dependencies).

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/quantilica/cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
